# yt-audio-downloader

./: package.json  pnpm-lock.yaml
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/output/cache/: downloads.db  playlists.db  video_cache.db
src-tauri/src/: lib.rs  main.rs
src/components/features/video/: Video.ts  VideoCard.tsx
src/features/config/: ConfigModal.tsx  config.ts
src/features/layout/: Navbar.tsx  theme.ts
src/features/video/: Player.tsx  VideoCard.tsx
